v1.1.2 error with menu animations and compare section has issues on tablet view

--- a/src/styles/_utils/_vars.scss
+++ b/src/styles/_utils/_vars.scss
@@ -2,6 +2,8 @@ $color-black: #1d1d1d;
 $color-gray: #c2c2c2;
 $color-white: #fff;
 
+$color-white-form: #f8f8fa;
+
 $transition-time: 0.3s;
 
 $grid-tablet-col: 6;
