--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -35,4 +35,22 @@
   @include onDesktop {
     grid-column: 5 / 9;
   }
+
+  &-form {
+    width: 100%;
+    height: 56px;
+    border-radius: 40px;
+
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 27px;
+
+    margin-bottom: 48px;
+    @include onTablet {
+      margin-bottom: 120px;
+    }
+    @include onDesktop {
+      margin-bottom: 182px;
+    }
+  }
 }
