--- a/src/styles/blocks/details.scss
+++ b/src/styles/blocks/details.scss
@@ -1,11 +1,14 @@
 .details {
   &__content {
+    margin-bottom: 80px;
     @include onTablet {
       @include useGrid($grid-tablet-col, $grid-gap);
+      margin-bottom: 120px;
     }
 
     @include onDesktop {
       @include useGrid($grid-pc-col, $grid-gap);
+      margin-bottom: 182px;
     }
   }
 
